continued dset filtering

--- a/dset_filtering/ssl_gr_anal.ipynb
+++ b/dset_filtering/ssl_gr_anal.ipynb
@@ -2,35 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "40a89163",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import os\n",
     "import essentia\n",
     "import essentia.standard as es\n",
-    "import numpy_rms\n",
     "from scipy.signal import hilbert\n",
+    "import utils as u\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "SSL_DSET_PATH = '/Volumes/Production Tools/coding_projs/THESIS/data_preprocesses/data/Diff-SSL-G-Comp'\n",
     "\n",
-    "DRY_PATH = 'processed_normalized'\n",
-    "WET_PATH = 'processed_ground_truth'\n",
+    "DRY_PATH = '/processed_normalized'\n",
+    "WET_PATH = '/processed_ground_truth'\n",
     "\n",
-    "SR = 44100\n",
-    "\n",
-    "def load_audio(path):\n",
-    "    audio = es.MonoLoader(filename=path, sampleRate=SR)()\n",
-    "    return audio"
+    "SR = 44100"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "def2e381",
    "metadata": {},
    "outputs": [
@@ -47,39 +42,31 @@
    ],
    "source": [
     "t_start = 61\n",
-    "t_length = 500\n",
+    "t_length = 0.1\n",
+    "window_size = 30\n",
     "\n",
-    "def window_rms(a, window_size):\n",
-    "  a2 = np.square(a)\n",
-    "  window = np.ones(window_size)/float(window_size)\n",
-    "  return np.sqrt(np.convolve(a2, window, 'valid'))\n",
-    "\n",
-    "audio = load_audio('/Volumes/Production Tools/coding_projs/THESIS/data_preprocesses/data/Diff-SSL-G-Comp/processed_normalized/NosPalpitants_UnmasteredWAV.wav')\n",
-    "audio = audio[t_start*SR:t_start*SR+t_length]\n",
+    "file_path = SSL_DSET_PATH+DRY_PATH+'/NosPalpitants_UnmasteredWAV.wav'\n",
+    "t, audio = u.load_audio(file_path, cut=(t_start, t_start+t_length))\n",
     "\n",
     "analytic_signal = hilbert(audio)\n",
-    "amplitude_envelope = np.abs(analytic_signal)\n",
-    "#amplitude_envelope = 20 * np.log10(amplitude_envelope)\n",
+    "amplitude_envelope = u.to_dB(np.abs(analytic_signal))\n",
     "\n",
-    "window_size = 30\n",
-    "rms_series = window_rms(audio, window_size)\n",
+    "t_rms, rms = u.window_rms(audio, window_size, in_dB=True)\n",
     "\n",
-    "t = np.arange(len(audio)) / SR\n",
-    "\n",
-    "\n",
+    "# PLOTTING\n",
     "fig, ax = plt.subplots(nrows=1, sharex='all', tight_layout=True, figsize=(10, 5))\n",
     "ax.set_title(\"hilbert vs rms\")\n",
     "ax.set_ylabel(\"Amplitude\")\n",
-    "ax.plot(t, audio, label='signal')\n",
+    "ax.plot(t, audio, label='Signal')\n",
     "ax.plot(t, amplitude_envelope, label='Hilbert')\n",
-    "ax.plot(t[window_size//2:-window_size//2+1], rms_series, label='RMS')\n",
+    "ax.plot(t_rms, rms, label='RMS')\n",
     "ax.legend()\n",
     "plt.show()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "id": "b59c71bb",
    "metadata": {},
    "outputs": [
@@ -103,57 +90,61 @@
    ],
    "source": [
     "t_start = 61\n",
-    "t_length = 400\n",
+    "t_length = 0.1\n",
     "window_size = int(SR/1000)\n",
     "print(window_size)\n",
     "\n",
-    "audio = load_audio('/Volumes/Production Tools/coding_projs/THESIS/data_preprocesses/data/Diff-SSL-G-Comp/processed_normalized/NosPalpitants_UnmasteredWAV.wav')\n",
-    "audio = audio[t_start*SR:t_start*SR+t_length]\n",
+    "# Load dry audio\n",
+    "path = SSL_DSET_PATH+DRY_PATH+'/NosPalpitants_UnmasteredWAV.wav'\n",
+    "t, audio = u.load_audio(path, cut=(t_start, t_start+t_length))\n",
     "\n",
-    "audio_wet = load_audio('/Volumes/Production Tools/coding_projs/THESIS/data_preprocesses/data/Diff-SSL-G-Comp/processed_ground_truth/threshold_-12_attack_30_release_0.4_ratio_10/NosPalpitants-exported.wav')\n",
-    "audio_wet = audio_wet[t_start*SR:t_start*SR+t_length]\n",
+    "# Load wet audio\n",
+    "path_wet = SSL_DSET_PATH+WET_PATH+'/threshold_-12_attack_30_release_0.4_ratio_10/NosPalpitants-exported.wav'\n",
+    "t, audio_wet = u.load_audio(path_wet, cut=(t_start, t_start+t_length))\n",
     "\n",
+    "# Compute envelopes for dry signal\n",
     "analytic_signal = hilbert(audio)\n",
-    "amplitude_envelope = np.abs(analytic_signal)\n",
-    "amplitude_envelope = 20 * np.log10(amplitude_envelope)\n",
-    "rms_series = window_rms(audio, window_size)\n",
-    "rms_series_dB = 20 * np.log10(rms_series)\n",
+    "amplitude_envelope = u.to_dB(np.abs(analytic_signal))\n",
+    "t_rms, rms_dB = u.window_rms(audio, window_size, in_dB=True)\n",
     "\n",
+    "# Compute envelopes for wet signal\n",
     "analytic_signal_wet = hilbert(audio_wet)\n",
-    "amplitude_envelope_wet = np.abs(analytic_signal_wet)\n",
-    "amplitude_envelope_wet = 20 * np.log10(amplitude_envelope_wet)\n",
-    "rms_series_wet = window_rms(audio_wet, window_size)\n",
-    "rms_series_wet_dB = 20 * np.log10(rms_series_wet)\n",
-    "t = np.arange(len(audio)) / SR\n",
+    "amplitude_envelope_wet = u.to_dB(np.abs(analytic_signal_wet))\n",
+    "t_rms_wet, rms_wet_dB = u.window_rms(audio_wet, window_size, in_dB=True)\n",
     "\n",
-    "gr_dB = amplitude_envelope_wet-amplitude_envelope\n",
-    "gr = 10**(gr_dB/20)\n",
+    "# Compute gain reduction in dB\n",
+    "gr_dB = amplitude_envelope_wet - amplitude_envelope\n",
+    "gr_rms_dB = rms_wet_dB - rms_dB\n",
     "\n",
-    "gr_rms = rms_series_wet_dB-rms_series_dB\n",
-    "rms = 10**(gr_rms/20)\n",
+    "# Convert gain reduction to amplitude\n",
+    "gr = u.to_amplitude(gr_dB)\n",
+    "gr_rms = u.to_amplitude(gr_rms_dB)\n",
     "\n",
-    "recreated_signal = audio*gr\n",
-    "recreated_signal_rms = audio[window_size//2:-window_size//2+1]*rms\n",
+    "# Recreate signals by applying gain reduction\n",
+    "recreated_signal = audio * gr\n",
+    "recreated_signal_rms = audio[window_size//2:-window_size//2+1] * gr_rms\n",
+    "\n",
+    "# PLOTTING\n",
     "fig, ax = plt.subplots(nrows=2, sharex='all', tight_layout=True, figsize=(10, 5))\n",
-    "ax[0].set_title(\"Hilbert aproach of Gain Reduction and Reconstruction\")\n",
+    "ax[0].set_title(\"Hilbert approach of Gain Reduction and Reconstruction\")\n",
     "ax[0].set_ylabel(\"Amplitude\")\n",
     "#ax[0].plot(t, audio, label='dry')\n",
     "ax[0].plot(t, audio_wet, label='wet')\n",
     "ax[0].plot(t, recreated_signal, label='recreated hilbert')\n",
-    "ax[0].plot(t[window_size//2+1:-window_size//2+2], recreated_signal_rms, label='recreated rms')\n",
-    "#ax[1].plot(t, amplitude_envelope, label='Envelope')\n",
-    "#ax[1].plot(t, amplitude_envelope_wet, label='Envelope wet')\n",
-    "ax[1].plot(t, gr_dB, label='GR_hilbert')\n",
-    "ax[1].plot(t[window_size//2+1:-window_size//2+2], gr_rms, label='GR_rms')\n",
-    "ax[1].set_ylabel(\"Amplitude [dB]\")\n",
+    "ax[0].plot(t_rms, recreated_signal_rms, label='recreated rms')\n",
     "ax[0].legend()\n",
+    "\n",
+    "ax[1].set_ylabel(\"Gain Reduction [dB]\")\n",
+    "ax[1].plot(t, gr_dB, label='GR_hilbert')\n",
+    "ax[1].plot(t_rms, gr_rms_dB, label='GR_rms')\n",
     "ax[1].legend()\n",
+    "\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "id": "fc9a34ae",
    "metadata": {},
    "outputs": [
@@ -177,82 +168,84 @@
    ],
    "source": [
     "t_start = 61\n",
-    "t_length = 400\n",
+    "t_length = 400 / SR  # Convert samples to seconds\n",
     "window_size = int(SR/1000)\n",
     "print(window_size)\n",
     "\n",
-    "audio = load_audio('/Volumes/Production Tools/coding_projs/THESIS/data_preprocesses/data/Diff-SSL-G-Comp/processed_normalized/NosPalpitants_UnmasteredWAV.wav')\n",
-    "audio = audio[t_start*SR:t_start*SR+t_length]\n",
+    "# Load dry audio\n",
+    "path_dry = SSL_DSET_PATH + DRY_PATH + '/NosPalpitants_UnmasteredWAV.wav'\n",
+    "t, audio = u.load_audio(path_dry, cut=(t_start, t_start + t_length))\n",
     "\n",
-    "audio_wet = load_audio('/Volumes/Production Tools/coding_projs/THESIS/data_preprocesses/data/Diff-SSL-G-Comp/processed_ground_truth/threshold_-12_attack_30_release_0.4_ratio_10/NosPalpitants-exported.wav')\n",
-    "audio_wet = audio_wet[t_start*SR:t_start*SR+t_length]\n",
+    "# Load wet audio 1 (threshold=-12, attack=30, release=0.4, ratio=10)\n",
+    "path_wet1 = SSL_DSET_PATH + WET_PATH + '/threshold_-12_attack_30_release_0.4_ratio_10/NosPalpitants-exported.wav'\n",
+    "t, audio_wet = u.load_audio(path_wet1, cut=(t_start, t_start + t_length))\n",
     "\n",
-    "audio_wet2 = load_audio('/Volumes/Production Tools/coding_projs/THESIS/data_preprocesses/data/Diff-SSL-G-Comp/processed_ground_truth/threshold_12_attack_30_release_0.8_ratio_2/NosPalpitants-exported.wav')\n",
-    "audio_wet2 = audio_wet2[t_start*SR:t_start*SR+t_length]\n",
+    "# Load wet audio 2 (threshold=12, attack=30, release=0.8, ratio=2)\n",
+    "path_wet2 = SSL_DSET_PATH + WET_PATH + '/threshold_12_attack_30_release_0.8_ratio_2/NosPalpitants-exported.wav'\n",
+    "t, audio_wet2 = u.load_audio(path_wet2, cut=(t_start, t_start + t_length))\n",
     "\n",
+    "# Compute envelopes for dry signal\n",
     "analytic_signal = hilbert(audio)\n",
-    "amplitude_envelope = np.abs(analytic_signal)\n",
-    "amplitude_envelope = 20 * np.log10(amplitude_envelope)\n",
-    "rms_series = window_rms(audio, window_size)\n",
-    "rms_series_dB = 20 * np.log10(rms_series)\n",
+    "amplitude_envelope = u.to_dB(np.abs(analytic_signal))\n",
+    "t_rms, rms_dB = u.window_rms(audio, window_size, in_dB=True)\n",
     "\n",
+    "# Compute envelopes for wet signal 1\n",
     "analytic_signal_wet = hilbert(audio_wet)\n",
-    "amplitude_envelope_wet = np.abs(analytic_signal_wet)\n",
-    "amplitude_envelope_wet = 20 * np.log10(amplitude_envelope_wet)\n",
-    "rms_series_wet = window_rms(audio_wet, window_size)\n",
-    "rms_series_wet_dB = 20 * np.log10(rms_series_wet)\n",
+    "amplitude_envelope_wet = u.to_dB(np.abs(analytic_signal_wet))\n",
+    "t_rms_wet, rms_wet_dB = u.window_rms(audio_wet, window_size, in_dB=True)\n",
     "\n",
+    "# Compute envelopes for wet signal 2\n",
     "analytic_signal_wet2 = hilbert(audio_wet2)\n",
-    "amplitude_envelope_wet2 = np.abs(analytic_signal_wet2)\n",
-    "amplitude_envelope_wet2 = 20 * np.log10(amplitude_envelope_wet2)\n",
-    "rms_series_wet2 = window_rms(audio_wet2, window_size)\n",
-    "rms_series_wet2_dB = 20 * np.log10(rms_series_wet2)\n",
+    "amplitude_envelope_wet2 = u.to_dB(np.abs(analytic_signal_wet2))\n",
+    "t_rms_wet2, rms_wet2_dB = u.window_rms(audio_wet2, window_size, in_dB=True)\n",
     "\n",
-    "t = np.arange(len(audio)) / SR\n",
+    "# Compute gain reduction in dB for wet signal 1\n",
+    "gr_dB = amplitude_envelope_wet - amplitude_envelope\n",
+    "gr_rms_dB = rms_wet_dB - rms_dB\n",
     "\n",
-    "gr_dB = amplitude_envelope_wet-amplitude_envelope\n",
-    "gr = 10**(gr_dB/20)\n",
+    "# Compute gain reduction in dB for wet signal 2\n",
+    "gr_dB2 = amplitude_envelope_wet2 - amplitude_envelope\n",
+    "gr_rms_dB2 = rms_wet2_dB - rms_dB\n",
     "\n",
-    "gr_rms = rms_series_wet_dB-rms_series_dB\n",
-    "rms = 10**(gr_rms/20)\n",
+    "# Convert gain reduction to amplitude\n",
+    "gr = u.to_amplitude(gr_dB)\n",
+    "gr_rms = u.to_amplitude(gr_rms_dB)\n",
+    "gr2 = u.to_amplitude(gr_dB2)\n",
+    "gr_rms2 = u.to_amplitude(gr_rms_dB2)\n",
     "\n",
-    "gr_dB2 = amplitude_envelope_wet2-amplitude_envelope\n",
-    "gr2 = 10**(gr_dB2/20)\n",
+    "# Recreate signals by applying gain reduction\n",
+    "recreated_signal = audio * gr\n",
+    "recreated_signal_rms = audio[window_size//2:-window_size//2+1] * gr_rms\n",
+    "recreated_signal2 = audio * gr2\n",
+    "recreated_signal_rms2 = audio[window_size//2:-window_size//2+1] * gr_rms2\n",
     "\n",
-    "gr_rms2 = rms_series_wet2_dB-rms_series_dB\n",
-    "rms2 = 10**(gr_rms2/20)\n",
-    "\n",
-    "recreated_signal = audio*gr\n",
-    "recreated_signal_rms = audio[window_size//2:-window_size//2+1]*rms\n",
-    "\n",
-    "recreated_signal2 = audio*gr2\n",
-    "recreated_signal_rms2 = audio[window_size//2:-window_size//2+1]*rms2\n",
+    "# PLOTTING\n",
     "fig, ax = plt.subplots(nrows=2, sharex='all', tight_layout=True, figsize=(10, 5))\n",
-    "ax[0].set_title(\"Hilbert aproach of Gain Reduction and Reconstruction\")\n",
+    "ax[0].set_title(\"Hilbert approach of Gain Reduction and Reconstruction\")\n",
     "ax[0].set_ylabel(\"Amplitude\")\n",
     "#ax[0].plot(t, audio, label='dry')\n",
     "ax[0].plot(t, audio_wet, label='wet1 (thr=-12, att=30, rel=0.4, ratio=10)')\n",
     "ax[0].plot(t, audio_wet2, label='wet2 (thr=12, att=30, rel=0.8, ratio=2)')\n",
     "ax[0].plot(t, recreated_signal, label='recreated hilbert 1')\n",
-    "ax[0].plot(t[window_size//2+1:-window_size//2+2], recreated_signal_rms, label='recreated rms 1')\n",
+    "ax[0].plot(t_rms, recreated_signal_rms, label='recreated rms 1')\n",
     "ax[0].plot(t, recreated_signal2, label='recreated hilbert 2', linestyle='--')\n",
-    "ax[0].plot(t[window_size//2+1:-window_size//2+2], recreated_signal_rms2, label='recreated rms 2', linestyle='--')\n",
-    "#ax[1].plot(t, amplitude_envelope, label='Envelope')\n",
-    "#ax[1].plot(t, amplitude_envelope_wet, label='Envelope wet')\n",
-    "ax[1].plot(t, gr_dB, label='GR_hilbert 1')\n",
-    "ax[1].plot(t[window_size//2+1:-window_size//2+2], gr_rms, label='GR_rms 1')\n",
-    "ax[1].plot(t, gr_dB2, label='GR_hilbert 2', linestyle='--')\n",
-    "ax[1].plot(t[window_size//2+1:-window_size//2+2], gr_rms2, label='GR_rms 2', linestyle='--')\n",
-    "ax[1].set_ylabel(\"Amplitude [dB]\")\n",
+    "ax[0].plot(t_rms, recreated_signal_rms2, label='recreated rms 2', linestyle='--')\n",
     "ax[0].legend()\n",
+    "\n",
+    "ax[1].set_ylabel(\"Gain Reduction [dB]\")\n",
+    "ax[1].plot(t, gr_dB, label='GR_hilbert 1')\n",
+    "ax[1].plot(t_rms, gr_rms_dB, label='GR_rms 1')\n",
+    "ax[1].plot(t, gr_dB2, label='GR_hilbert 2', linestyle='--')\n",
+    "ax[1].plot(t_rms, gr_rms_dB2, label='GR_rms 2', linestyle='--')\n",
     "ax[1].legend()\n",
+    "\n",
     "plt.show()"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dset_env",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
